tests/PhiTest/compile_failure/src/StaticRequire.fail.cpp
#include <Phi/Test/TestMacros.hpp>

TEST_CASE("STATIC_REQUIRE")
{
    STATIC_REQUIRE(false);
}
